# learn_bazel

./: .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/my-python-app/: BUILD.bazel  main.py
projects/my-python-app/requirements/: BUILD.bazel  requirements_lock.txt
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
