"repo to learn bazel"

module(name = "learn-bazel")

bazel_dep(name = "rules_python", version = "0.31.0")

# We need to do another use_extension call to expose the "pythons_hub"
# repo.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

# The default toolchain to use if nobody configures a toolchain.
# NOTE: This is not a stable version. It is provided for convenience, but will
# change frequently to track the most recent Python version.
# NOTE: The root module can override this.
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "pythons_hub")

# This call registers the Python toolchains.
register_toolchains("@pythons_hub//:all")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.11",
    requirements_lock = "//projects/my-python-app/requirements:requirements_lock.txt",
    requirements_windows = "//projects/my-python-app/requirements:requirements_windows.txt",
)
use_repo(pip, "pip_deps")
