load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    size = "small",
    srcs = ["calculator_test.py"],
    deps = [
        "//projects/calculator",
    ],
)
